fixed broken right align

--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ p a:hover, li a:hover {
 	text-align: center;
 }
 
-#contact-wrapper {
+#contact-link-wrapper {
 	text-align: right;
 }
 
